<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.assignment4Android.contacts.MainActivity"
   >

    <EditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/name"
        style="@style/edit_text_style"
        android:background="@drawable/rounded_shape"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/phonenumber_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        android:hint="@string/phone_number"
        style="@style/edit_text_style"
        android:background="@drawable/rounded_shape"
        android:inputType="phone"
        android:maxLength="11"
        android:drawableStart="@drawable/baseline_local_phone_24"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber_text"
        android:hint="@string/description"
        style="@style/edit_text_style"
        android:background="@drawable/rounded_shape"
        android:drawableStart="@drawable/baseline_description_24"
        android:drawablePadding="10dp"
        />
    <Button
        android:id="@+id/save_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/description_text"
        app:layout_constraintEnd_toEndOf="@+id/description_text"
        app:layout_constraintTop_toBottomOf="@+id/description_text"
        android:layout_marginVertical="20dp"
        android:text="@string/save"
        android:textSize="16sp"
        android:textAlignment="gravity"
        android:backgroundTint="@color/blue"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/saved_contacts_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/save_btn"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp"
        tools:listitem="@layout/item_rv"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        />

</androidx.constraintlayout.widget.ConstraintLayout>