<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.assignment4Android.contactDetails.ContactDetailsActivity"
    >

    <ImageView
        android:id="@+id/contact_container_img"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/rounded_image_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/contact_details_container"
        app:layout_constraintStart_toStartOf="@+id/contact_details_container"
        />

    <ImageView
        android:id="@+id/contact_person_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintBottom_toTopOf="@+id/contact_details_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contact_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_person_img"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:id="@+id/details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/details_name"
            style="@style/view_text_style"
            />
        <TextView
            android:id="@+id/details_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/details_name"
            app:layout_constraintBottom_toBottomOf="@+id/details_name"
            tools:text="Mahmoud Abdelnabi"
            style="@style/view_text_style"
            />
        <TextView
            android:id="@+id/details_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_name"
            android:text="@string/details_phone_number"
            style="@style/view_text_style"
            />
        <TextView
            android:id="@+id/details_phone_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/details_phone_number"
            app:layout_constraintBottom_toBottomOf="@+id/details_phone_number"
            tools:text="01094478729"
            style="@style/view_text_style"/>
        <TextView
            android:id="@+id/details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_phone_number"
            android:text="@string/details_description"
            style="@style/view_text_style"
            />
        <TextView
            android:id="@+id/details_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/details_description"
            app:layout_constraintBottom_toBottomOf="@+id/details_description"
            tools:text="........."
            style="@style/view_text_style"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>